统一异常处理页面、jar包命名规范